--- a/tomorrow_core/pom.xml
+++ b/tomorrow_core/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
     
@@ -49,15 +49,20 @@
     	<version>1.2.12</version>
     </dependency>
     
+    <!-- for validation data
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <version>1.0.0.GA</version>
-      <scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>4.0.1.GA</version>
+	</dependency>
+	 -->
   </dependencies>
-  
-  
 
   
   <build>
