--- a/tomorrow_web/src/main/webapp/WEB-INF/web.xml
+++ b/tomorrow_web/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,17 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
+	
+	<filter>
+		<filter-name>FilterLogin</filter-name>
+		<display-name>FilterLogin</display-name>
+		<description></description>
+		<filter-class>com.breakfast.tomorrow.web.server.filter.FilterLogin</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>FilterLogin</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
   <!-- Servlets -->
   <servlet>
@@ -28,7 +39,7 @@
 
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>login</welcome-file>
+    <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
 
 </web-app>
